<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menuContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.gurunars.android_utils.IconView
        android:layout_alignParentRight="true"
        android:layout_above="@+id/moveDown"
        style="@style/Button.Vertical"
        android:id="@+id/moveUp" />

    <com.gurunars.android_utils.IconView
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/largeMargin"
        style="@style/Button.Vertical"
        android:id="@+id/moveDown" />

    <com.gurunars.android_utils.IconView
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/selectAll"
        android:id="@+id/delete"
        style="@style/Button.Horizontal" />

    <com.gurunars.android_utils.IconView
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/edit"
        android:id="@+id/selectAll"
        style="@style/Button.Horizontal" />

    <com.gurunars.android_utils.IconView
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/largeMargin"
        android:id="@+id/edit"
        style="@style/Button.Horizontal" />

</RelativeLayout>