<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="recyclerView" type="id" />
    <item name="itemList" type="id" />
    <item name="payloadTag" type="id" />
    <item name="isSelected" type="id" />
    <item name="noItemsLabel" type="id" />
    <item name="count" type="id" />
    <item name="selectableItemListView" type="id" />
</resources>