<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/clear"
        android:showAsAction="never"
        android:title="@string/clear" />

    <item
        android:id="@+id/reset"
        android:showAsAction="never"
        android:title="@string/reset" />

    <item
        android:id="@+id/delete"
        android:showAsAction="never"
        android:title="@string/delete" />

    <item
        android:id="@+id/create"
        android:showAsAction="never"
        android:title="@string/create" />

    <item
        android:id="@+id/update"
        android:showAsAction="never"
        android:title="@string/update" />

    <item
        android:id="@+id/moveUp"
        android:showAsAction="never"
        android:title="@string/move_up" />

    <item
        android:id="@+id/moveDown"
        android:showAsAction="never"
        android:title="@string/move_down" />

</menu>