<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--suppress UnusedResources -->
    <string name="empty">Empty</string>
</resources>