<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/addMany"
        android:showAsAction="never"
        android:title="@string/addMany" />

    <item
        android:id="@+id/lock"
        android:icon="@drawable/ic_lock"
        android:showAsAction="always"
        android:title="@string/lock" />

    <item
        android:id="@+id/unlock"
        android:icon="@drawable/ic_unlock"
        android:showAsAction="always"
        android:title="@string/unlock" />

    <item
        android:id="@+id/reset"
        android:icon="@drawable/ic_reload"
        android:showAsAction="always"
        android:title="@string/reset" />

</menu>